# hex_weekend

./: CMakeLists.txt  fips.yml
data/: skybox2.yml  skybox_assets.yml  texture_assets.yml
data/skybox/elyvisions/: names.txt
html5/: CMakeLists.txt
include/: Camera.h  asset_loading.h  fetch.h  hex.h  types.h
libs/: CMakeLists.txt
libs/HandmadeMath/: CMakeLists.txt  HandmadeMath.h
libs/cdbgui/: cdbgui.c  cdbgui.h
libs/sokol/: CMakeLists.txt  sokol-memtrack.c  sokol-memtrack.cc  sokol.c  sokol.cc
scripts/: convert.py
src/: CMakeLists.txt  TODO.txt  lit_shader.glsl  main.c  shaders.glsl
wgpu/: CMakeLists.txt
